# wasmCloudArtefacts

./: .gitignore  Makefile  README.md  cnr-demo.md  examples.md
actors/: Makefile
actors/imagenetpostprocessor/: Cargo.toml  Makefile  README.md  actor.mk
actors/imagenetpostprocessor/src/: classes.rs  imagenet_labels_onnx.rs  imagenet_labels_tflite.rs  lib.rs
actors/imagenetpreprocessor/: Cargo.toml  Makefile  README.md
actors/imagenetpreprocessor/src/: img.rs  lib.rs
actors/imagenetpreprocrgb8/: Cargo.toml  Makefile  README.md  wasmcloud.toml
actors/imagenetpreprocrgb8/src/: img.rs  lib.rs
actors/imagepreprocessor/: Cargo.toml  Makefile
actors/imagepreprocessor/src/: img.rs  lib.rs
actors/inference/: Cargo.toml  README.md
actors/inference/inference/: Cargo.toml  Makefile
actors/inference/inference/src/: lib.rs
actors/inference/src/: lib.rs
actors/inferenceapi/: Cargo.toml  Makefile  README.md
actors/inferenceapi/src/: lib.rs
actors/mnistpostprocessor/: Cargo.toml  Makefile  README.md
actors/mnistpostprocessor/src/: lib.rs
actors/mnistpreprocessor/: Cargo.toml  Makefile  README.md
actors/mnistpreprocessor/src/: img.rs  lib.rs
bindle/models/: .gitignore  bindle_client_get_labels.sh  bindle_client_push_invoice_and_parcels.sh  bindle_client_server.sh  bindle_create.sh  bindle_server_start.sh  bindle_start.sh  bindle_stop.sh  identity_input_output.csv  identity_input_output.json  invoice.toml  invoice_w_groups.toml  mobilenetv1_quant_edgetpu.csv  mobilenetv1_quant_edgetpu.json  mobilenetv1_quant_edgetpu.toml  mobilenetv1_uint8_quant.csv  mobilenetv1_uint8_quant.json  mobilenetv1_uint8_quant.toml  mobilenetv2-7.csv  mobilenetv2-7.json  mobilenetv2-7.toml  mobilenetv2_uint8_quant.csv  mobilenetv2_uint8_quant.json  mobilenetv2_uint8_quant.toml  plus3.csv  plus3.json  plus3.toml  resnet152-v2-7.csv  resnet152-v2-7.json  resnet152-v2-7.toml  squeezenetv1-1-7.csv  squeezenetv1-1-7.json  squeezenetv1-1-7.toml
bindle/scripts/: bindle_create.sh  bindle_get_labels.sh  bindle_server_start.sh  push_bindle.sh
deploy/: .gitignore  Makefile  actor_config.json  actor_config.toml  actor_config_tflite.json  actor_config_tpu.json  checkup.sh  docker-compose.yml  env  http_config.json  run.sh  run_iot_device.sh  stress-test.sh  stresstest.sh
docs/: aarch64-linux.md  add.md  arm_architecture.md  index.md  x86_64-linux  x86_64-linux.md
interfaces/imagenetpostprocess/: Makefile  codegen.toml  imagenet.smithy
interfaces/imagenetpostprocess/rust/: Cargo.toml
interfaces/imagenetpostprocess/rust/src/: imagenet.rs  lib.rs
interfaces/mlcompute/: Makefile  codegen.toml  converter.smithy
interfaces/mlcompute/rust/: Cargo.toml
interfaces/mlcompute/rust/src/: converter.rs  lib.rs
interfaces/mlinference/: Makefile  README.md  codegen.toml  mlinference.smithy
interfaces/mlinference/rust/: Cargo.toml
interfaces/mlinference/rust/src/: lib.rs  mlinference.rs
interfaces/mlpreprocessing/: Makefile  codegen.toml  mlpreprocessing.smithy
interfaces/mlpreprocessing/rust/: Cargo.toml
interfaces/mlpreprocessing/rust/src/: lib.rs  mlpreprocessing.rs
iot/: configure_edge.sh  configure_host.sh  restart_edge.sh
providers/: Makefile
providers/mlinference/: Cargo.toml  Makefile  README.md  modeldata.json  provider.mk  provider_test_config.toml  unittests.sh
providers/mlinference/src/: bindle_loader.rs  lib.rs  main.rs  metadata.rs  settings.rs  tract.rs  utils.rs
providers/mlinference/src/inference/: engine.rs  mod.rs  tflite.rs  tract.rs
providers/mlinference/tests/: mlinference_test.rs
providers/mlinference/tests/src/: lib.rs
