[package]
name = "imagenetpostprocessor"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "imagenetpostprocessor"

[dependencies]
async-trait = "0.1"
byteorder = "1.4"
futures = "0.3"
form_urlencoded = "1.0"
ndarray = "0.15"
wasmbus-rpc = "0.8.2"
wasmcloud-interface-logging = "0.5.0"
wasmcloud_interface_mlinference = { path="../../../../interfaces/ml/rust" }
wasmcloud_interface_mlimagenet = { path="../../interfaces/imagenetpostprocess/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
