[package]
name = "imagenetpreprocrgb8"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "imagenetpreprocrgb_8"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.4"
futures = "0.3"
form_urlencoded = "1.0"
image = { version = "0.24", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
log = "0.4"
ndarray = "0.15"
wasmbus-rpc = "0.10"
wasmcloud-interface-logging = "0.7"
wasmcloud_interface_mlpreprocessing = { path="../../interfaces/mlpreprocessing/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
