[package]
name = "imagepreprocessor"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "imagepreprocessor"

[dependencies]
async-trait = "0.1"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.8.4"
wasmcloud-interface-httpserver = "0.5"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
