[package]
name = "inferenceapi"
version = "0.2.1"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "inferenceapi"

[dependencies]
async-trait = "0.1"
form_urlencoded = "1.0"
futures = "0.3"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasmbus-rpc = "0.10"
wasmcloud-interface-logging = { version="0.7.1", features = [ "sync_macro" ] }
wasmcloud-interface-httpserver = "0.7"
wasmcloud_interface_mlinference = "0.3"
wasmcloud_interface_mlpreprocessing = { path="../../interfaces/mlpreprocessing/rust" }
wasmcloud_interface_mlimagenet = { path="../../interfaces/imagenetpostprocess/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
