[package]
name = "mnistpreprocessor"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mnistpreprocessor"

[dependencies]
log = "0.4"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.10"
#wasmcloud-interface-httpserver = "0.7"
wasmcloud-interface-logging = "0.7"
wasmcloud_interface_mlpreprocessing = { path="../../interfaces/mlpreprocessing/rust" }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "bmp"]  }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
