[package]
name = "mlinference"
version = "0.2.1"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bindle = "0.8.0"
byteorder = "1.4"
log = "0.4"
ndarray = "0.15"
num_enum = "0.5.7"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tract-data = "0.16.1"
tract-linalg = "0.16.1"
tract-onnx = { version = "0.16.1" }
tract-tensorflow = "0.16.1"
wasmbus-rpc = "0.8.4"
wasmcloud_interface_mlinference = { path="../../../../wasmcloud/interfaces/ml/rust" }

# test dependencies
[dev-dependencies]
tokio = { version = "1.0", features = [ "full" ] }
wasmcloud-test-util = "0.3.1"

[lib]
name = "wasmcloud_provider_mlinference"
path = "src/lib.rs"

[[bin]]
name = "mlinference"
path = "bin/main.rs"
