[package]
name = "mlinference"
version = "0.3.1"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bindle = "0.8.0"
byteorder = "1.4"
log = "0.4"
ndarray = "0.15"
num_enum = "0.5.7"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tract-data = "0.17"
tract-linalg = "0.17"
tract-onnx = { version = "0.17" }
tract-tensorflow = "0.17"
wasmbus-rpc = "0.10"
edgetpu = { git = "https://github.com/ionosnetworks/edgetpu-rs" }
tflite = { git = "https://github.com/ionosnetworks/tflite-rs", rev = "abcaeab" }

# wasmcloud_interface_mlinference = { git = "https://github.com/wasmCloud/interfaces" }
wasmcloud_interface_mlinference = "0.3"

# test dependencies
[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = [ "full" ] }
wasmcloud-test-util = "0.5"
image = { version = "0.24", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }

[lib]
name = "wasmcloud_provider_mlinference"
path = "src/lib.rs"

[[bin]]
name = "mlinference"
path = "bin/main.rs"
