[package]
name = "mlinference"
version = "0.3.1"
edition = "2021"
resolver = "2"

[features]
default = []
tflite = [ "dep:tflite"]
edgetpu = ["tflite", "dep:edgetpu"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bindle = "0.8.1"
byteorder = "1.4"
log = "0.4"
ndarray = "0.15"
num_enum = "0.5.7"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing-log = "0.1"
tract-data = "0.16.1"
tract-linalg = "0.16.1"
tract-onnx = { version = "0.16.1" }
tract-tensorflow = "0.16.1"
wasmbus-rpc = "0.10"
wasmcloud_interface_mlinference = "0.3"
#edgetpu = { git = "https://github.com/Finfalter/edgetpu-rs", rev = "d86f59c" }
#tflite = { git = "https://github.com/Finfalter/tflite-rs", rev = "5c11a15" }

# optional features
edgetpu = { git = "https://github.com/Finfalter/edgetpu-rs", rev = "d86f59c", optional=true }
tflite = { git = "https://github.com/Finfalter/tflite-rs", rev = "5c11a15", optional=true }

# test dependencies
[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = [ "full" ] }
wasmcloud-test-util = "0.5"
image = { version = "0.24", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }

[lib]
name = "wasmcloud_provider_mlinference"
path = "src/lib.rs"

[[bin]]
name = "mlinference"
path = "bin/main.rs"
